fix on flying cart scrollBar

--- a/Front/src/styles/Components/_flyingCart.scss
+++ b/Front/src/styles/Components/_flyingCart.scss
@@ -15,9 +15,10 @@
 
   &__product-list{
     margin: 1rem 0;
+    width: 100%;
     height: 600px;
-    padding: 1rem 2.5rem 1.5rem;
-    overflow-y: scroll;
+    padding: 1rem 65px 1.5rem;
+    overflow-y: auto;
 
     & > li:not(:nth-last-of-type(1)) {
       margin-bottom: 3rem;
@@ -92,6 +93,11 @@
       margin-bottom: 2rem;
       font-weight: bold;
       color: black;
+
+      &-amount {
+        margin-left: 0.5rem;
+        color: white;
+      }
     }
 
     & > button {
